--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,7 @@
-
-node_modules/
-.expo/
-dist/
-web-build/
-*.orig.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
+node_modules
+.env
+.vercel
 *.txt
 .env
 *.env
-# Metro
-.metro-health-check*
-
-# debug
-npm-debug.*
-yarn-debug.*
-yarn-error.*
-
-# macOS
-.DS_Store
-*.pem
-
-# local env files
 .env*.local
-.env
-
-# typescript
-*.tsbuildinfo
